[package]
name = "lake_canyon_api"
version = "0.1.0"
edition = "2021"
license = "AGPLv3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
tower = "0.4.13"
tower-http = { version = "0.5.2", features = [
  "tracing",
  "trace",
  "request-id",
  "set-header",
  "propagate-header",
] }
uuid = { version = "1.8.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = [
  "env-filter",
  "registry",
  "fmt",
  "json",
] }
tracing-log = "0.2.0"
tracing-bunyan-formatter = "0.3.9"
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.38.0", features = ["full"] }
secrecy = { version = "0.8.0", features = ["serde"] }

[dev-dependencies]
reqwest = "0.12.5"
